tests/ui/attributes/rustc_stable_impl_id.stderr
error: stable impl id: 0
  --> $DIR/rustc_stable_impl_id.rs:7:1
   |
LL | impl S {}
   | ^^^^^^^^^

error: stable impl id: 4
  --> $DIR/rustc_stable_impl_id.rs:27:1
   |
LL | impl S {}
   | ^^^^^^^^^

error: stable impl id: 1
  --> $DIR/rustc_stable_impl_id.rs:13:5
   |
LL |     impl crate::S {}
   |     ^^^^^^^^^^^^^^^^

error: stable impl id: 2
  --> $DIR/rustc_stable_impl_id.rs:16:5
   |
LL |     impl crate::S {}
   |     ^^^^^^^^^^^^^^^^

error: stable impl id: 3
  --> $DIR/rustc_stable_impl_id.rs:20:9
   |
LL |         impl crate::S {}
   |         ^^^^^^^^^^^^^^^^

error: stable impl id: 5
  --> $DIR/rustc_stable_impl_id.rs:33:5
   |
LL |     impl crate::S {}
   |     ^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

